# semantic-search-pinecone-fastapi

./: .gitignore  env-example  pyproject.toml
src/: main.py
src/api/: assistant_router.py  embeddings_router.py  index_router.py  miscellabeous_router.py  query_router.py  upsert_router.py
src/services/: assistant_service.py  authentication_service.py  embeddings_service.py  index_service.py  miscellabeous_service.py  query_service.py  upsert_service.py
